Undeprecate WKNavigationData https://bugs.webkit.org/show_bug.cgi?id=196559 <rdar://44927425>

Reviewed by Geoff Garen.

* UIProcess/API/Cocoa/WKNavigationData.h:
It is used to communicate information from FrameLoaderClient::updateGlobalHistory() to the application.
This use in WKBrowsingContextHistoryDelegate is definitely still deprecated, but its use in
WKHistoryDelegatePrivate does not have an adequate replacement yet, so it must remain undeprecated SPI.



Canonical link: https://commits.webkit.org/210937@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243951 268f45cc-cd09-0410-ab3c-d52691b4dbfc