Source/WebKit/Shared/Cocoa/APIObject.mm
@@ -256,9 +256,7 @@ void* Object::newObject(size_t size, Type type)
         break;
 
     case Type::NavigationData:
-        ALLOW_DEPRECATED_DECLARATIONS_BEGIN
         wrapper = [WKNavigationData alloc];
-        ALLOW_DEPRECATED_DECLARATIONS_END
         break;
 
     case Type::NavigationResponse:
