Source/WebKit/UIProcess/API/Cocoa/WKNavigationData.h
@@ -31,7 +31,7 @@
 
 #import <Foundation/Foundation.h>
 
-WK_CLASS_DEPRECATED_WITH_REPLACEMENT("WKNavigation", macos(10.10, WK_MAC_TBA), ios(8.0, WK_IOS_TBA))
+WK_CLASS_AVAILABLE(macosx(10.10), ios(8.0))
 @interface WKNavigationData : NSObject
 
 @property (readonly) NSString *title;
