Source/WebKit/UIProcess/API/Cocoa/WKNavigationData.mm
@@ -30,9 +30,7 @@
 #import <WebCore/ResourceRequest.h>
 #import <WebCore/ResourceResponse.h>
 
-IGNORE_WARNINGS_BEGIN("deprecated-implementations")
 @implementation WKNavigationData {
-IGNORE_WARNINGS_END
     API::ObjectStorage<API::NavigationData> _data;
 }
 
