Source/WebKit/UIProcess/API/Cocoa/WKNavigationDataInternal.h
@@ -31,9 +31,7 @@
 namespace WebKit {
 
 template<> struct WrapperTraits<API::NavigationData> {
-    ALLOW_DEPRECATED_DECLARATIONS_BEGIN
     using WrapperClass = WKNavigationData;
-    ALLOW_DEPRECATED_DECLARATIONS_END
 };
 
 }
